# markdown2pdf

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  DONATE.md  README.md  SECURITY.md  build.rs  dist-workspace.toml  flake.nix  markdown2pdfrc.example.toml  rust-toolchain.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
assets/fonts/: OFL.txt
docs/: CLI.md  Configuration.md  Library.md  cli.md  config.toml  configuration.md  library.md
markdown2pdf/: config.toml
src/lib/: config.rs  debug.rs  fonts.rs  frontmatter.rs  lib.rs  markdown.rs  pdf.rs  styling.rs  validation.rs
src/lib/render/: font.rs  hyphenate.rs  image_policy.rs  ir.rs  layout.rs  lower.rs  mod.rs  net_guard.rs  net_read.rs  postprocess.rs  preprocess.rs
src/lib/render/math/: font.rs  layout.rs  mod.rs  parse.rs  symbols.rs
src/lib/styling/: error.rs  merge.rs  mod.rs  resolved.rs  schema.rs  themes.rs
src/lib/styling/themes/: academic.toml  compact.toml  default.toml  github.toml  minimal.toml  modern.toml
tests/: commonmark_spec.rs  markdown.rs  net_remote_image_gate.rs  net_size_cap.rs  net_uppercase_scheme_gate.rs  render.rs  render_fonts.rs  render_styling.rs  stress.rs  styling_schema.rs
tests/markdown/: admonition_tests.rs  autolink_extended_tests.rs  backslash_escape_tests.rs  blockquote_block_constructs_tests.rs  blockquote_inline_tests.rs  blockquote_lazy_continuation_tests.rs  code_span_space_strip_tests.rs  collect_all_text_tests.rs  common.rs  definition_list_tests.rs  emphasis_flanking_tests.rs  entity_reference_tests.rs  eof_unterminated_tests.rs  error_position_tests.rs  fenced_code_extended_tests.rs  fenced_code_info_string_tests.rs  footnote_tests.rs  gfm_trio_tests.rs  hard_break_extended_tests.rs  hard_line_break_tests.rs  heading_hash_in_paragraph_tests.rs  heading_strictness_tests.rs  highlight_tests.rs  html_block_element_tests.rs  html_cdata_tests.rs  html_comment_block_tests.rs  html_declaration_tests.rs  html_inline_edge_tests.rs  html_processing_instruction_tests.rs  html_raw_content_block_tests.rs  html_standalone_tag_block_tests.rs  image_reference_tests.rs  indented_code_block_tests.rs  inline_footnote_tests.rs  intra_word_underscore_tests.rs  line_ending_normalization_tests.rs  link_destination_edge_tests.rs  link_entity_decoding_tests.rs  link_escape_tests.rs  link_inline_content_tests.rs  (+34 more)
tests/render/: _admonition_showcase.rs  _pdf_size_audit.rs  _showcase_inspect.rs  admonition.rs  adversarial.rs  columns.rs  common.rs  config_fidelity.rs  config_validation.rs  fonts.rs  golden.rs  highlight.rs  html_blocks_and_links.rs  image_pipeline.rs  math.rs  net_guard.rs  structure.rs  styling.rs  whitespace.rs  widow_orphan.rs  wikilink.rs
tests/spec/: html_render.rs  known_failures.txt  mod.rs  normalize.rs  runner.rs
