[package]
name = "markdown2pdf"
version = "0.4.0"
edition = "2024"
rust-version = "1.85"
authors = ["Ismael Sh <me@theiskaa.com>"]
description = "Create PDF with Markdown files (a md to pdf transpiler)"
readme = "README.md"
license = "MIT"
keywords = ["md", "markdown", "pdf", "markdown-to-pdf", "markdown2pdf"]
repository = "https://github.com/theiskaa/markdown2pdf"
build = "build.rs"

[lib]
name = "markdown2pdf"
path = "src/lib/lib.rs"

[[bin]]
name = "markdown2pdf"
path = "src/bin/main.rs"

[features]
default = []
fetch = ["dep:reqwest"]
rustls-tls = ["fetch", "reqwest/rustls"]
native-tls = ["fetch", "reqwest/native-tls"]

[dependencies]
log = "0.4"
toml = "1.1"
clap = { version = "4.6", features = ["derive"] }
reqwest = { version = "0.13", features = [
    "blocking",
], default-features = false, optional = true }
printpdf = { version = "0.9", default-features = false, features = [
    "png",
    "jpeg",
] }
phf = "0.13"

# Foundation crates for the in-tree renderer (src/lib/render/).
ttf-parser = "0.25"
rustybuzz = "0.20"
unicode-linebreak = "0.1"
# default `variable-fonts` only subsets CFF2-variable; we don't use it.
subsetter = { version = "0.2", default-features = false }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

[build-dependencies]
phf_codegen = "0.13"
serde_json = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
